# lisa-ml

./: .gitignore  README.md  pyproject.toml
notebooks/: binary_nn.ipynb  data.ipynb  evaulation.ipynb  fim.ipynb  network.ipynb  ngboost.ipynb  randomforest.ipynb  randomforest.qmd  svm.ipynb  xgboost.ipynb
src/: data.py  eval.py  main.py  model.py  ndf.py  tempCodeRunnerFile.py  train.py  ultils.py
src/config/: config.yaml
