[tool.poetry]
name = "LISA_ML_project"
version = "0.1.0"
description = "A binary classifier project for binary systems using PyTorch"
authors = ["Irwin Tay <irwin.tay@campus.lmu.de>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.2.2"
numpy = "1.26.4"
pandas = "2.2.3"
scikit-learn = "1.6.1"
matplotlib = "3.10.0"
seaborn = "0.13.2"
tabulate = "0.9.0"
astropy = "7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
    "D205",
    "D213",
    "D407",
    "D413",
    "D202",
    "D203",
    "D406",
    "D401",
    "D400",
    "D415",
    "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
